dependencies are stable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ dependencies = [
   "fastapi>=0.112.2,<0.113",
   "typer>=0.12.5,<0.13",
   "httpx>=0.27.2,<0.28",
-  "rich>=13.8.0,<14",
   "pydantic>2.0",
+  "uvicorn>=0.30.6,<0.31",
+  "rich>=13.7.1,<13.8",
 ]
 requires-python = ">= 3.9"
 
@@ -21,7 +22,7 @@ requires = ["hatchling"]
 
 [tool.pixi.project]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64"]
+platforms = ["linux-64", "osx-arm64", "win-64"]
 
 [tool.pixi.pypi-dependencies]
 ranx = { path = ".", editable = true }
