--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 requires-python = ">= 3.9"
 
 [project.scripts]
-ranx = "ranx.cli:app"
+ranx = "ranx.cli.main:app"
 
 [build-system]
 build-backend = "hatchling.build"
@@ -28,7 +28,7 @@ platforms = ["linux-64", "osx-arm64", "win-64"]
 ranx = { path = ".", editable = true }
 
 [tool.pixi.tasks]
-ranx = "python3 ranx/cli.py"
+ranx = "python3 ranx/cli/main.py"
 
 [tool.pixi.feature.devdeps.dependencies]
 pytest = "*"
