--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
   "typer>=0.12.5,<0.13",
   "httpx>=0.27.2,<0.28",
   "pydantic>2.0",
-  "uvicorn>=0.30.6,<0.31",
   "rich>=13.7.1,<13.8",
+  "uvicorn[standard]>=0.30.6,<0.31", "email-validator>=2.2.0,<3",
 ]
 requires-python = ">= 3.9"
 
