--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
   "httpx>=0.27.2,<0.28",
   "pydantic>2.0",
   "rich>=13.7.1,<13.8",
-  "uvicorn[standard]>=0.30.6,<0.31", "email-validator>=2.2.0,<3",
+  "uvicorn[standard]>=0.30.6,<0.31",
+  "email-validator>=2.2.0,<3",
 ]
 requires-python = ">= 3.9"
 
