--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ranlibx"
-version = "0.0.1"
-description = "Add a short description here"
+version = "0.0.2"
+description = "Global interface for RAN"
 authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
 dependencies = [
   "fastapi>=0.112.2,<0.113",
