--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,14 +15,14 @@ dependencies = [
 requires-python = ">= 3.9"
 
 [project.scripts]
-ranx = "ranx.cli.main:app"
+ranx = "ranlibx.cli.main:app"
 
 [build-system]
 build-backend = "hatchling.build"
 requires = ["hatchling"]
 
-[tool.hatch.build.targets.wheel]
-packages = ["ranx"]  # account for discrepancy between ranlibx and ranx
+#[tool.hatch.build.targets.wheel]
+#packages = ["ranx"]  # account for discrepancy between ranlibx and ranx
 
 [tool.pixi.project]
 channels = ["conda-forge"]
@@ -37,7 +37,7 @@ hatch = "*"
 ruff = ">=0.6.8,<0.7"
 
 # [tool.pixi.tasks]
-## ranx = "python3 ranx/cli/main.py"
+## ranx = "python3 ranlibx/cli/main.py"
 
 [tool.pixi.feature.devdeps.tasks]
 build = "hatch build ./dist"
