--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,20 +14,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Pixi Python Project
         uses: prefix-dev/setup-pixi@v0.8.1
         with:
           pixi-version: v0.28.2
           cache: true
           environments: dev  # separate by spaces; only using the dev environment to build
-      
+
       - name: Install twine from conda-forge (globally as to not interfere)
         run: pixi global install twine
-      
+
       - name: Build package
         run: pixi run -e dev build
-      
+
       - name: Publish to PyPI
         run: twine upload dist/*
         env:
@@ -35,19 +35,9 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
 
       # Now for uploading the conda packages
-      # - name: Install rattler-build
-      #   run: pixi global install rattler-build
-      # 
-      # - name: Build it for conda with rattler-build
-      #   run: rattler-build [TODO]
-      #
-      # - name: Upload to Prefix
-      #   run: python3 scripts/upload-prefixdev.py [TODO - PUT .conda HERE] $PREFIX_TOKEN
-      #   env:
-      #     PREFIX_TOKEN: ${{ secrets.PREFIX_DEV_TOKEN }}
-      # 
-      # - name: Upload to Anaconda
-      #   run: anaconda upload [TODO - put .conda HERE]
-      #   env:
-      #     ANACONDA_TOKEN: ${{secrets.ANACONDA_TOKEN}}
+      - name: Build conda package & upload
+        run: scripts/conda-build-and-upload.sh
+        env:
+          PREFIX_TOKEN: ${{ secrets.PREFIX_DEV_TOKEN }}
+          #ANACONDA_TOKEN: ${{secrets.ANACONDA_TOKEN}}
 
