--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,6 @@ jobs:
       - name: Build conda package & upload
         run: scripts/conda-build-and-upload.sh
         env:
-          PREFIX_TOKEN: ${{ secrets.PREFIX_DEV_TOKEN }}
+          PREFIX_DEV_TOKEN: ${{ secrets.PREFIX_DEV_TOKEN }}
           #ANACONDA_TOKEN: ${{secrets.ANACONDA_TOKEN}}
 
