--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       
       - name: Install rattler-build, grayskull, and conda-recipe-manager
-        run: pixi global install rattler-build grayskull conda-recipe-manager
+        run: pixi global install "conda-forge::rattler-build==0.22.0" "conda-forge::grayskull==2.7.3" "conda-forge::conda-recipe-manager==0.2.1"
 
       # Now for uploading the conda packages
       - name: Build conda package & upload
