--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - "v*"
-    branches:
-      - main
+    # branches:
+    #   - main
 
 permissions:
   contents: write
