--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ranlibx"
-version = "0.0.29"
+version = "0.0.30"
 description = "Global interface for RAN"
 authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
 readme = "README.md"
@@ -19,7 +19,8 @@ requires-python = ">= 3.9"
 [project.urls]
 Repository = "https://github.com/anemo-ai/ranlibx"
 Changelog = "https://github.com/anemo-ai/ranlibx/blob/main/CHANGELOG.md"
-Homepage = "https://ran.so/docs"
+Homepage = "https://ran.so"
+Documentation = "https://ran.so/docs"
 Source = "https://github.com/anemo-ai/ranlibx"
 Tracker = "https://github.com/anemo-ai/ranlibx/issues"
 Twitter = "https://twitter.com/AnemoDotAI"
